Add test framework with some simple tests. Various fixes for modules and library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,15 @@ IF(HAVE_SYS_TIME_H)
     LIST(APPEND CMAKE_REQUIRED_INCLUDES sys/time.h)
 ENDIF(HAVE_SYS_TIME_H)
 
+CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
+IF(HAVE_CLOCK_GETTIME)
+    CHECK_SYMBOL_EXISTS(CLOCK_MONOTONIC_RAW time.h HAVE_CLOCK_MONOTONIC_RAW)
+ELSE(HAVE_CLOCK_GETTIME)
+    CHECK_INCLUDE_FILES(sys/timeb.h HAVE_SYS_TIMEB_H)
+ENDIF(HAVE_CLOCK_GETTIME)
+
+FIND_LIBRARY(HAVE_LIBRT rt)
+
 IF(ENABLE_THREAD_UNSAFE MATCHES "ON")
 	SET(THREAD_UNSAFE 1)
 ELSE(ENABLE_THREAD_UNSAFE MATCHES "ON")
@@ -183,9 +192,14 @@ SET(MODULES_LIST null)
 AddModules(MODULES_LIST)
 
 ADD_LIBRARY(ltproto SHARED ${LTPROTO_SRC} ${MODULES_SRC})
+IF(HAVE_LIBRT)
+	TARGET_LINK_LIBRARIES(ltproto rt)
+ENDIF(HAVE_LIBRT)
 
 SET_TARGET_PROPERTIES(ltproto PROPERTIES PUBLIC_HEADER "src/ltproto.h")
 
 INSTALL(TARGETS ltproto LIBRARY PUBLIC_HEADER 
         LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib 
         PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+        
+ADD_SUBDIRECTORY(test)
