Add skeleton of udp_shmem module, init random numbers.
* Added skeleton of udp_shmem module.
* Tests now uses specific ltproto module instead of default one.
* Added detection of openssl.
* Seed PRNG with the best available method.
* Added detection of sched_* functions.

--- a/config.h.in
+++ b/config.h.in
@@ -86,6 +86,10 @@
 
 #cmakedefine HAVE_CLOCK_MONOTONIC_RAW 1
 
+#cmakedefine HAVE_SCHED_H		 1
+#cmakedefine HAVE_SCHED_SETAFFINITY 1
+
+#cmakedefine HAVE_OPENSSL		1
 
 /* sys/types */
 #ifdef HAVE_SYS_TYPES_H
