--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ INCLUDE(CheckSymbolExists)
 INCLUDE(CheckCSourceCompiles)
 INCLUDE(CheckLibraryExists)
 INCLUDE(CheckCCompilerFlag)
+INCLUDE(FindOpenSSL)
 
 OPTION(ENABLE_DEBUG_MODE   "Enable debug output [default: ON]"                  ON)
 OPTION(ENABLE_OPTIMIZATION "Enable optimization [default: OFF]"                 OFF)
@@ -107,6 +108,11 @@ CHECK_C_COMPILER_FLAG(-fpic SUPPORT_Fpic)
 IF(SUPPORT_Fpic)
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fpic")
 ENDIF(SUPPORT_Fpic)
+
+IF(OPENSSL_FOUND)
+	INCLUDE_DIRECTORIES(OPENSSL_INCLUDE_DIR)
+	SET(HAVE_OPENSSL 1)
+ENDIF(OPENSSL_FOUND)
  
  # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
@@ -153,6 +159,7 @@ CHECK_INCLUDE_FILES(netinet/in.h  HAVE_NETINET_IN_H)
 CHECK_INCLUDE_FILES(arpa/inet.h  HAVE_ARPA_INET_H)
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
 CHECK_INCLUDE_FILES(sys/sendfile.h HAVE_SYS_SENDFILE_H)
+CHECK_INCLUDE_FILES(sched.h HAVE_SCHED_H)
 
 # Some dependencies
 IF(HAVE_SYS_WAIT_H)
@@ -173,6 +180,10 @@ ELSE(HAVE_CLOCK_GETTIME)
     CHECK_INCLUDE_FILES(sys/timeb.h HAVE_SYS_TIMEB_H)
 ENDIF(HAVE_CLOCK_GETTIME)
 
+IF(HAVE_SCHED_H)
+	CHECK_SYMBOL_EXISTS(sched_setaffinity sched.h HAVE_SCHED_SETAFFINITY)
+ENDIF(HAVE_SCHED_H)
+
 FIND_LIBRARY(HAVE_LIBRT rt)
 
 IF(ENABLE_THREAD_UNSAFE MATCHES "ON")
@@ -187,14 +198,17 @@ CONFIGURE_FILE(config.h.in src/config.h)
 INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src" "${CMAKE_BINARY_DIR}/src")
 
 SET(LTPROTO_SRC src/ltproto.c ${CMAKE_BINARY_DIR}/src/modules.c)
-SET(MODULES_SRC src/null.c)
-SET(MODULES_LIST null)
+SET(MODULES_SRC src/null.c src/udp_shmem.c)
+SET(MODULES_LIST null udp_shmem)
 AddModules(MODULES_LIST)
 
 ADD_LIBRARY(ltproto SHARED ${LTPROTO_SRC} ${MODULES_SRC})
 IF(HAVE_LIBRT)
 	TARGET_LINK_LIBRARIES(ltproto rt)
 ENDIF(HAVE_LIBRT)
+IF(OPENSSL_FOUND)
+	TARGET_LINK_LIBRARIES(ltproto ${OPENSSL_LIBRARIES})
+ENDIF(OPENSSL_FOUND)
 
 SET_TARGET_PROPERTIES(ltproto PROPERTIES PUBLIC_HEADER "src/ltproto.h")
 
