--- a/config.h.in
+++ b/config.h.in
@@ -91,6 +91,9 @@
 
 #cmakedefine HAVE_OPENSSL		1
 
+#cmakedefine HAVE_SRANDOM_R		1
+#cmakedefine HAVE_ARC4RAND		1
+
 /* sys/types */
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
@@ -231,6 +234,9 @@
 struct lt_module_ctx;
 struct ltproto_socket;
 
+struct lt_allocator_ctx;
+struct lt_alloc_tag;
+
 typedef struct module_s {
     char *name;
     int priority;
@@ -248,6 +254,16 @@ typedef struct module_s {
     int (*module_close_func)(struct lt_module_ctx *ctx, struct ltproto_socket *sk);
     int (*module_destroy_func)(struct lt_module_ctx *ctx);
 } module_t;
+
+typedef struct allocator_s {
+	char *name;
+	int priority;
+	int (*allocator_init_func)(struct lt_allocator_ctx **ctx, uint64_t init_seq);
+	void * (*allocator_alloc_func)(struct lt_allocator_ctx *ctx, size_t size);
+	struct lt_alloc_tag * (*allocator_gettag_func)(struct lt_allocator_ctx *ctx, void *ptr);
+	void * (*allocator_attachtag_func)(struct lt_allocator_ctx *ctx, struct lt_alloc_tag *tag);
+	void (*allocator_free_func)(struct lt_allocator_ctx *ctx, void *addr, size_t size);
+} allocator_t;
 
 extern module_t *modules[];
 
