Add logic structure to linear allocator.
* Add chunks and arenas definition.
* Implement shared memory attaching.
* Add alignment utilities.
* Test for hugetlb for more effecient memory management.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,6 +206,7 @@ ENDIF(HAVE_SCHED_H)
 
 CHECK_SYMBOL_EXISTS(srandom_r stdlib.h HAVE_SRANDOM_R)
 CHECK_SYMBOL_EXISTS(arc4random stdlib.h HAVE_ARC4RAND)
+CHECK_SYMBOL_EXISTS(MAP_HUGETLB sys/mman.h HAVE_HUGETLB)
 
 FIND_LIBRARY(HAVE_LIBRT rt)
 
