Be more accurate about timers.
* Fixed clock_getres support.
* Added more precise timing checks.
* Check for the OS specific most optimal clock.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,12 @@ IF(NOT CMAKE_C_OPT_FLAGS)
 ENDIF(NOT CMAKE_C_OPT_FLAGS)
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
+
+FIND_LIBRARY(HAVE_LIBRT rt)
+
+IF(HAVE_LIBRT)
+	LIST(APPEND CMAKE_REQUIRED_LIBRARIES rt)
+ENDIF(HAVE_LIBRT)
  
 # Check platform specific includes
 CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
@@ -193,9 +199,10 @@ IF(HAVE_SYS_TIME_H)
     LIST(APPEND CMAKE_REQUIRED_INCLUDES sys/time.h)
 ENDIF(HAVE_SYS_TIME_H)
 
-CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
+CHECK_SYMBOL_EXISTS(clock_gettime time.h HAVE_CLOCK_GETTIME)
 IF(HAVE_CLOCK_GETTIME)
     CHECK_SYMBOL_EXISTS(CLOCK_MONOTONIC_RAW time.h HAVE_CLOCK_MONOTONIC_RAW)
+    CHECK_SYMBOL_EXISTS(CLOCK_REALTIME_PRECISE time.h HAVE_CLOCK_REALTIME_PRECISE)
 ELSE(HAVE_CLOCK_GETTIME)
     CHECK_INCLUDE_FILES(sys/timeb.h HAVE_SYS_TIMEB_H)
 ENDIF(HAVE_CLOCK_GETTIME)
@@ -207,8 +214,6 @@ ENDIF(HAVE_SCHED_H)
 CHECK_SYMBOL_EXISTS(srandom_r stdlib.h HAVE_SRANDOM_R)
 CHECK_SYMBOL_EXISTS(arc4random stdlib.h HAVE_ARC4RAND)
 CHECK_SYMBOL_EXISTS(MAP_HUGETLB sys/mman.h HAVE_HUGETLB)
-
-FIND_LIBRARY(HAVE_LIBRT rt)
 
 IF(ENABLE_THREAD_UNSAFE MATCHES "ON")
 	SET(THREAD_UNSAFE 1)
