Added SysV tests.
* Added tests for System V memory.
* Some fixes to build on FreeBSD.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,6 +181,7 @@ CHECK_INCLUDE_FILES(sys/cdefs.h  HAVE_SYS_CDEFS_H)
 CHECK_INCLUDE_FILES(sys/file.h  HAVE_SYS_FILE_H)
 CHECK_INCLUDE_FILES(sys/utsname.h  HAVE_SYS_UTSNAME_H)
 CHECK_INCLUDE_FILES(sys/resource.h  HAVE_SYS_RESOURCE_H)
+CHECK_INCLUDE_FILES(sys/random.h  HAVE_SYS_RANDOM_H)
 CHECK_INCLUDE_FILES(netinet/in.h  HAVE_NETINET_IN_H)
 CHECK_INCLUDE_FILES(arpa/inet.h  HAVE_ARPA_INET_H)
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
@@ -212,7 +213,11 @@ IF(HAVE_SCHED_H)
 ENDIF(HAVE_SCHED_H)
 
 CHECK_SYMBOL_EXISTS(srandom_r stdlib.h HAVE_SRANDOM_R)
-CHECK_SYMBOL_EXISTS(arc4random stdlib.h HAVE_ARC4RAND)
+IF(HAVE_SYS_RANDOM_H)
+	CHECK_SYMBOL_EXISTS(arc4random sys/random.h HAVE_ARC4RAND)
+ELSE(HAVE_SYS_RANDOM_H)
+	CHECK_SYMBOL_EXISTS(arc4random stdlib.h HAVE_ARC4RAND)
+ENDIF(HAVE_SYS_RANDOM_H)
 CHECK_SYMBOL_EXISTS(MAP_HUGETLB sys/mman.h HAVE_HUGETLB)
 
 IF(ENABLE_THREAD_UNSAFE MATCHES "ON")
