--- a/config.h.in
+++ b/config.h.in
@@ -66,10 +66,6 @@
   #endif /* HAVE_MACHINE_ENDIAN_H */
  #endif /* HAVE_SYS_ENDIAN_H */
 #endif /* HAVE_ENDIAN_H */
- 
-#if !defined(__BYTE_ORDER) || (__BYTE_ORDER != __BIG_ENDIAN && __BYTE_ORDER != __LITTLE_ENDIAN)
- # error "Undefined or unknown BYTE_ORDER"
-#endif
 
 #cmakedefine HAVE_SYS_QUEUE_H    1
 #cmakedefine HAVE_SYS_MMAN_H     1
@@ -79,6 +75,7 @@
 #cmakedefine HAVE_SYS_WAIT_H     1
 #cmakedefine HAVE_SYS_PARAM_H    1
 #cmakedefine HAVE_SYS_FILE_H     1
+#cmakedefine HAVE_SYS_RANDOM_H   1
 
 #cmakedefine HAVE_INET_PTON      1
 
@@ -226,6 +223,11 @@
 #include <sys/wait.h>
 #endif
 
+/* sys/random */
+#ifdef HAVE_SYS_RANDOM_H
+#include <sys/random.h>
+#endif
+
 /* math */
 #ifdef HAVE_MATH_H
 #include <math.h>
@@ -233,6 +235,9 @@
 
 #include <errno.h>
 #include <signal.h>
+
+#include <sys/ipc.h>
+#include <sys/shm.h>
 
 struct module_s;
 struct allocator_s;
