FreeBSD specific fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,12 +70,12 @@ ENDMACRO(AddAllocators ALIST)
 
 IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE -DLINUX")
+	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_POSIX_C_SOURCE=199506L")
 ENDIF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
 
 IF(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_BSD_SOURCE -DBSD")
 ENDIF(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_POSIX_SOURCE")
 
 # Process with warn flags
 SET(CMAKE_C_WARN_FLAGS "")
