Make optimizations possible.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,11 +137,11 @@ ENDIF(OPENSSL_FOUND)
  
  # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
-    IF(ENABLE_OPTIMIZATION MATCHES "ON" AND NOT ENABLE_DEBUG_MODE MATCHES "ON")
+    IF(ENABLE_OPTIMIZATION MATCHES "ON")
         SET(CMAKE_C_OPT_FLAGS "-O3 -fstrict-aliasing")
-    ELSE(ENABLE_OPTIMIZATION MATCHES "ON" AND NOT ENABLE_DEBUG_MODE MATCHES "ON")
+    ELSE(ENABLE_OPTIMIZATION MATCHES "ON")
         SET(CMAKE_C_OPT_FLAGS "-O0 -fstrict-aliasing -g")
-    ENDIF(ENABLE_OPTIMIZATION MATCHES "ON" AND NOT ENABLE_DEBUG_MODE MATCHES "ON")
+    ENDIF(ENABLE_OPTIMIZATION MATCHES "ON")
 ENDIF(NOT CMAKE_C_OPT_FLAGS)
 
 SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
