Allow bind to a single core.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ ENDIF(OPENSSL_FOUND)
  # Optimization flags
 IF(NOT CMAKE_C_OPT_FLAGS)
     IF(ENABLE_OPTIMIZATION MATCHES "ON")
-        SET(CMAKE_C_OPT_FLAGS "-O3 -fstrict-aliasing")
+        SET(CMAKE_C_OPT_FLAGS "-Ofast -march=native -fstrict-aliasing")
     ELSE(ENABLE_OPTIMIZATION MATCHES "ON")
         SET(CMAKE_C_OPT_FLAGS "-O0 -fstrict-aliasing -g")
     ENDIF(ENABLE_OPTIMIZATION MATCHES "ON")
@@ -217,6 +217,10 @@ CHECK_INCLUDE_FILES(netinet/in.h  HAVE_NETINET_TCP_H)
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
 CHECK_INCLUDE_FILES(sys/sendfile.h HAVE_SYS_SENDFILE_H)
 CHECK_INCLUDE_FILES(sched.h HAVE_SCHED_H)
+
+IF(HAVE_SCHED_H)
+	CHECK_SYMBOL_EXISTS(sched_setaffinity sched.h HAVE_SCHED_SETAFFINITY)
+ENDIF(HAVE_SCHED_H)  
 
 # Some dependencies
 IF(HAVE_SYS_WAIT_H)
