Support FreeBSD cpuset (2).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,8 +182,9 @@ ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
  
 # Check platform specific includes
 CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
+CHECK_INCLUDE_FILES(sys/param.h HAVE_SYS_PARAM_H)
 CHECK_INCLUDE_FILES(sys/time.h  HAVE_SYS_TIME_H)
-CHECK_INCLUDE_FILES(sys/uio.h   HAVE_SYS_UIO_H)
+CHECK_INCLUDE_FILES(sys/types.h;sys/socket.h;sys/uio.h   HAVE_SYS_UIO_H)
 
 CHECK_INCLUDE_FILES(fcntl.h     HAVE_FCNTL_H)
 CHECK_INCLUDE_FILES(math.h      HAVE_MATH_H)
@@ -213,14 +214,19 @@ CHECK_INCLUDE_FILES(sys/resource.h  HAVE_SYS_RESOURCE_H)
 CHECK_INCLUDE_FILES(sys/random.h  HAVE_SYS_RANDOM_H)
 CHECK_INCLUDE_FILES(netinet/in.h  HAVE_NETINET_IN_H)
 CHECK_INCLUDE_FILES(arpa/inet.h  HAVE_ARPA_INET_H)
-CHECK_INCLUDE_FILES(netinet/in.h  HAVE_NETINET_TCP_H)
+CHECK_INCLUDE_FILES(netinet/tcp.h  HAVE_NETINET_TCP_H)
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
 CHECK_INCLUDE_FILES(sys/sendfile.h HAVE_SYS_SENDFILE_H)
 CHECK_INCLUDE_FILES(sched.h HAVE_SCHED_H)
+CHECK_INCLUDE_FILES(sys/param.h;sys/cpuset.h HAVE_SYS_CPUSET_H)
 
 IF(HAVE_SCHED_H)
 	CHECK_SYMBOL_EXISTS(sched_setaffinity sched.h HAVE_SCHED_SETAFFINITY)
 ENDIF(HAVE_SCHED_H)  
+
+IF(HAVE_SYS_CPUSET_H)
+	CHECK_SYMBOL_EXISTS(cpuset_setaffinity sys/cpuset.h HAVE_CPUSET_SETAFFINITY)
+ENDIF(HAVE_SYS_CPUSET_H)
 
 # Some dependencies
 IF(HAVE_SYS_WAIT_H)
@@ -248,7 +254,7 @@ ENDIF(HAVE_SCHED_H)
 
 CHECK_SYMBOL_EXISTS(srandom_r stdlib.h HAVE_SRANDOM_R)
 IF(HAVE_SYS_RANDOM_H)
-	CHECK_SYMBOL_EXISTS(arc4random sys/random.h HAVE_ARC4RAND)
+	CHECK_SYMBOL_EXISTS(arc4random stdlib.h;sys/random.h HAVE_ARC4RAND)
 ELSE(HAVE_SYS_RANDOM_H)
 	CHECK_SYMBOL_EXISTS(arc4random stdlib.h HAVE_ARC4RAND)
 ENDIF(HAVE_SYS_RANDOM_H)
