--- a/config.h.in
+++ b/config.h.in
@@ -48,6 +48,9 @@
 
 #cmakedefine HAVE_SCHED_SETAFFINITY 1
 
+#cmakedefine HAVE_SYS_CPUSET_H   1
+#cmakedefine HAVE_CPUSET_SETAFFINITY 1
+
 /* sys/types */
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
@@ -244,6 +247,10 @@
 
 #ifdef WITH_GPERF_TOOLS
 #include <google/profiler.h>
+#endif
+
+#ifdef HAVE_SYS_CPUSET_H
+#include <sys/cpuset.h>
 #endif
 
 #include <errno.h>
