Allow debug symbols being added even in opt mode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,7 +144,13 @@ IF(NOT CMAKE_C_OPT_FLAGS)
     ENDIF(ENABLE_OPTIMIZATION MATCHES "ON")
 ENDIF(NOT CMAKE_C_OPT_FLAGS)
 
-SET(CMAKE_C_FLAGS "${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
+IF(ENABLE_DEBUG_MODE MATCHES "ON")
+	SET(CMAKE_C_DEBUG_FLAGS "-g")
+ELSE(ENABLE_DEBUG_MODE MATCHES "ON")
+	SET(CMAKE_C_DEBUG_FLAGS "")
+ENDIF(ENABLE_DEBUG_MODE MATCHES "ON")
+
+SET(CMAKE_C_FLAGS "${CMAKE_C_DEBUG_FLAGS} ${CMAKE_C_OPT_FLAGS} ${CMAKE_C_FLAGS} ${CMAKE_C_WARN_FLAGS}")
 
 FIND_LIBRARY(HAVE_LIBRT rt)
 
