Add unix_shmem test module.
Use unix seqpacket socket for singnalling and shared memory for data
transfer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,8 +284,9 @@ SET(LTPROTO_SRC src/ltproto.c
 				
 SET(MODULES_SRC src/null.c 
 				src/udp_shmem.c
-				src/unix_socket.c)
-SET(MODULES_LIST null udp_shmem unix)
+				src/unix_socket.c
+				src/unix_shmem.c)
+SET(MODULES_LIST null udp_shmem unix unix_shmem)
 
 SET(ALLOCATORS_SRC	src/alloc_linear.c 
 					src/alloc_system.c)
