--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,7 +190,7 @@ ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
 CHECK_INCLUDE_FILES(sys/types.h HAVE_SYS_TYPES_H)
 CHECK_INCLUDE_FILES(sys/param.h HAVE_SYS_PARAM_H)
 CHECK_INCLUDE_FILES(sys/time.h  HAVE_SYS_TIME_H)
-CHECK_INCLUDE_FILES(sys/types.h;sys/socket.h;sys/uio.h   HAVE_SYS_UIO_H)
+CHECK_INCLUDE_FILES("sys/types.h;sys/socket.h;sys/uio.h"   HAVE_SYS_UIO_H)
 
 CHECK_INCLUDE_FILES(fcntl.h     HAVE_FCNTL_H)
 CHECK_INCLUDE_FILES(math.h      HAVE_MATH_H)
@@ -224,7 +224,7 @@ CHECK_INCLUDE_FILES(netinet/tcp.h  HAVE_NETINET_TCP_H)
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
 CHECK_INCLUDE_FILES(sys/sendfile.h HAVE_SYS_SENDFILE_H)
 CHECK_INCLUDE_FILES(sched.h HAVE_SCHED_H)
-CHECK_INCLUDE_FILES(sys/param.h;sys/cpuset.h HAVE_SYS_CPUSET_H)
+CHECK_INCLUDE_FILES("sys/param.h;sys/cpuset.h" HAVE_SYS_CPUSET_H)
 
 IF(HAVE_SCHED_H)
 	CHECK_SYMBOL_EXISTS(sched_setaffinity sched.h HAVE_SCHED_SETAFFINITY)
