Fixes to test framework:
- Flush stdout.
- Link run_test to build.
- Set reuseaddr to avoid bind issues.
- Sleep after each test to allow some context switching.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,3 +10,5 @@ TARGET_LINK_LIBRARIES(ltproto_test m)
 IF(ENABLE_GPERF_TOOLS MATCHES "ON")
 	TARGET_LINK_LIBRARIES(ltproto_test profiler)
 ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
+EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_test.sh)
