--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -290,9 +290,28 @@ int main(int argc, char **argv) {
 }
 " HAVE_FUTEX)
 
-IF(NOT HAVE_MONITOR_MWAIT AND NOT HAVE_FUTEX)
+CHECK_C_SOURCE_RUNS("
+#include <errno.h>
+#include <sys/types.h>
+#include <sys/umtx.h>
+#include <sys/time.h>
+#include <unistd.h>
+#include <stdio.h>
+int main(int argc, char **argv) {
+	int a = 0;
+	struct timespec ts = {.tv_sec = 0, .tv_nsec = 100000};
+	
+	if (_umtx_op((void *)&a, UMTX_OP_WAIT_UINT, 0, 0, (void *)&ts)== -1 && errno != ETIMEDOUT) {
+		return -1;
+	}
+	
+	return 0;
+}
+" HAVE_UMTX_OP)
+
+IF(NOT HAVE_MONITOR_MWAIT AND NOT HAVE_FUTEX AND NOT HAVE_UMTX_OP)
 	MESSAGE(FATAL_ERROR "No spinning logic available, cannot continue (futexes and monitor/mwait are supported now)")
-ENDIF(NOT HAVE_MONITOR_MWAIT AND NOT HAVE_FUTEX)
+ENDIF(NOT HAVE_MONITOR_MWAIT AND NOT HAVE_FUTEX AND NOT HAVE_UMTX_OP)
 
 # Some dependencies
 IF(HAVE_SYS_WAIT_H)
