--- a/config.h.in
+++ b/config.h.in
@@ -53,6 +53,7 @@
 
 #cmakedefine HAVE_HAVE_MONITOR_MWAIT 1
 #cmakedefine HAVE_FUTEX	1
+#cmakedefine HAVE_UMTX_OP	1
 
 /* sys/types */
 #ifdef HAVE_SYS_TYPES_H
