Add the sleep version of shmem module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,8 +365,9 @@ SET(MODULES_SRC src/null.c
 				src/udp_shmem.c
 				src/unix_socket.c
 				src/unix_shmem.c
-				src/shmem.c)
-SET(MODULES_LIST null udp_shmem unix unix_shmem shmem)
+				src/shmem.c
+				src/shmem_sleep.c)
+SET(MODULES_LIST null udp_shmem unix unix_shmem shmem shmem_sleep)
 
 SET(ALLOCATORS_SRC	src/alloc_linear.c 
 					src/alloc_system.c)
