Some hacks to support pipe latency test.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,3 +12,7 @@ IF(ENABLE_GPERF_TOOLS MATCHES "ON")
 ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
 EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_test.sh)
+EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_lat.sh ${CMAKE_CURRENT_BINARY_DIR}/test_lat.sh)
+EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_lat.py ${CMAKE_CURRENT_BINARY_DIR}/plot_lat.py)
