Add support of libnuma.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,18 @@ IF(HAVE_LIBRT)
 	LIST(APPEND CMAKE_REQUIRED_LIBRARIES rt)
 ENDIF(HAVE_LIBRT)
 
+FIND_LIBRARY(HAVE_NUMA numa)
+
+IF(HAVE_NUMA)
+	FIND_PATH(HAVE_NUMA_H numa.h PATHS /opt/include
+										/usr/include
+										/usr/local/include
+										 DOC "Path where libnuma includes can be found")
+	IF(HAVE_NUMA_H)
+		INCLUDE_DIRECTORIES("${HAVE_NUMA_H}")
+	ENDIF(HAVE_NUMA_H)
+ENDIF(HAVE_NUMA)
+
 # Google performance tools
 
 IF(ENABLE_GPERF_TOOLS MATCHES "ON")
@@ -384,6 +396,9 @@ ENDIF(HAVE_LIBRT)
 IF(OPENSSL_FOUND)
 	TARGET_LINK_LIBRARIES(ltproto ${OPENSSL_LIBRARIES})
 ENDIF(OPENSSL_FOUND)
+IF(HAVE_NUMA_H)
+	TARGET_LINK_LIBRARIES(ltproto numa)
+ENDIF(HAVE_NUMA_H)
 
 SET_TARGET_PROPERTIES(ltproto PROPERTIES PUBLIC_HEADER "src/ltproto.h")
 
