Allow build with old gcc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -237,6 +237,7 @@ CHECK_INCLUDE_FILES("sys/types.h;sys/socket.h;netinet/tcp.h"  HAVE_NETINET_TCP_H
 CHECK_INCLUDE_FILES(poll.h HAVE_POLL_H)
 CHECK_INCLUDE_FILES(sys/sendfile.h HAVE_SYS_SENDFILE_H)
 CHECK_INCLUDE_FILES(sched.h HAVE_SCHED_H)
+CHECK_INCLUDE_FILES(cpuid.h HAVE_CPUID_H)
 CHECK_INCLUDE_FILES("sys/param.h;sys/cpuset.h" HAVE_SYS_CPUSET_H)
 
 IF(HAVE_SCHED_H)
