--- a/config.h.in
+++ b/config.h.in
@@ -56,6 +56,8 @@
 #cmakedefine HAVE_UMTX_OP	1
 #cmakedefine HAVE_NUMA_H	1
 
+#cmakedefine HAVE_SETPROCTITLE	1
+
 /* sys/types */
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
