--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,6 +215,7 @@ CHECK_INCLUDE_FILES(time.h      HAVE_TIME_H)
 CHECK_INCLUDE_FILES(unistd.h    HAVE_UNISTD_H)
 CHECK_INCLUDE_FILES(sysexits.h  HAVE_SYSEXITS_H)
 CHECK_INCLUDE_FILES(stdint.h  HAVE_STDINT_H)
+CHECK_INCLUDE_FILES(stdbool.h  HAVE_STDBOOL_H)
 CHECK_INCLUDE_FILES(inttypes.h  HAVE_INTTYPES_H)
 CHECK_INCLUDE_FILES(endian.h  HAVE_ENDIAN_H)
 CHECK_INCLUDE_FILES(sys/endian.h  HAVE_SYS_ENDIAN_H)
