--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,3 +16,7 @@ EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_lat.sh ${CMAKE_CURRENT_BINARY_DIR}/test_lat.sh)
 EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_lat.py ${CMAKE_CURRENT_BINARY_DIR}/plot_lat.py)
+EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_speed.py ${CMAKE_CURRENT_BINARY_DIR}/plot_speed.py)
+EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_speed.sh ${CMAKE_CURRENT_BINARY_DIR}/test_speed.sh)
