Add a skeleton for shared memory arbiter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -414,3 +414,7 @@ INSTALL(TARGETS ltproto LIBRARY PUBLIC_HEADER
         PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
         
 ADD_SUBDIRECTORY(test)
+
+IF(HAVE_SCM_RIGHTS AND OPENSSL_FOUND)
+	ADD_SUBDIRECTORY(shmem_arbiter)
+ENDIF(HAVE_SCM_RIGHTS AND OPENSSL_FOUND)
