Link libm to libltproto for ceil.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -406,6 +406,7 @@ ENDIF(OPENSSL_FOUND)
 IF(HAVE_NUMA_H)
 	TARGET_LINK_LIBRARIES(ltproto numa)
 ENDIF(HAVE_NUMA_H)
+TARGET_LINK_LIBRARIES(ltproto m)
 
 SET_TARGET_PROPERTIES(ltproto PROPERTIES PUBLIC_HEADER "src/ltproto.h")
 
