Fix shmem_arbiter and its test case.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,11 +5,14 @@ SET(LTPROTO_TEST_SRC	test_main.c
 
 ADD_EXECUTABLE(ltproto_test ${LTPROTO_TEST_SRC})
 TARGET_LINK_LIBRARIES(ltproto_test ltproto)
-# For calculating log10
-TARGET_LINK_LIBRARIES(ltproto_test m)
 IF(ENABLE_GPERF_TOOLS MATCHES "ON")
 	TARGET_LINK_LIBRARIES(ltproto_test profiler)
 ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
+
+SET(ARBITER_TEST_SRC	test_arbiter.c)
+ADD_EXECUTABLE(test_arbiter ${ARBITER_TEST_SRC})
+TARGET_LINK_LIBRARIES(test_arbiter ltproto)
+
 EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_test.sh)
 EXECUTE_PROCESS(
