Improve test framework.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,8 @@ EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_lat.sh ${CMAKE_CURRENT_BINARY_DIR}/test_lat.sh)
 EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_lat.py ${CMAKE_CURRENT_BINARY_DIR}/plot_lat.py)
+	EXECUTE_PROCESS(
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/common.sh ${CMAKE_CURRENT_BINARY_DIR}/common.sh)
 EXECUTE_PROCESS(
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_speed.py ${CMAKE_CURRENT_BINARY_DIR}/plot_speed.py)
 EXECUTE_PROCESS(
